# securexe-launcher

./: README.md
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: gen_signing_key.rs  sign_test_link.rs
src-tauri/src/: bundle.rs  error.rs  flow.rs  install.rs  lib.rs  main.rs  orchestrator.rs  platform.rs  repo.rs  run.rs  signature.rs  verify.rs
